fix: correct collapse chevron rotation

--- a/src/components/Collapse/collapse.scss
+++ b/src/components/Collapse/collapse.scss
@@ -6,6 +6,7 @@
   overflow: hidden;
   max-width: 1240px;
   width: 100%;
+
   @media screen and (max-width: 768px) {
     width: 100%;
     margin-left: 0;
@@ -19,13 +20,14 @@
     background-color: $Theme-color;
     border-radius: 10px;
     height: 52px;
-    padding: 8 10px;
+    padding: 2px 10px;
     cursor: pointer;
 
     @media screen and (max-width: 768px) {
       height: 30px;
     }
-// --- Title ---
+
+    // --- Title ---
     > div:first-child {
       color: white;
       font-size: 18px;
@@ -33,9 +35,9 @@
       line-height: 26px;
       margin-left: 10px;
     }
-// --- Arrow ---
+
+    // --- Arrow ---
     > div:last-child {
-      transition: transform 0.7s ease;
       height: 24px;
       width: 24px;
       color: white;
@@ -47,7 +49,13 @@
       }
     }
 
-    &.collapseHeaderOpened > div:last-child {
+    
+    .chevron {
+      transition: transform 0.5s ease;
+    }
+
+    
+    &.collapseHeaderOpened .chevron {
       transform: rotate(180deg);
     }
   }
@@ -68,11 +76,6 @@
       font-size: 14px;
     }
 
-    // Animate class applied when content is visible
-    &.animate {
-      opacity: 1;
-      transform: translateY(0);
-      height: max-content;
-    }
+    
   }
 }
