--- a/src/layout/MainContent/MainContent.scss
+++ b/src/layout/MainContent/MainContent.scss
@@ -1,4 +1,4 @@
-.main-content {
+.main-Content {
   margin: 0 auto;
   max-width: 1240px;
   margin-bottom: 1.25rem;
